@@ -18,7 +18,6 @@ package org.labkey.test.tests.list;
 
 import org.hamcrest.CoreMatchers;
 import org.hamcrest.MatcherAssert;
-import org.junit.Assume;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -109,7 +108,6 @@ public class ListTest extends BaseWebDriverTest
     protected final static String LIST_NAME_HTML_KEY = "A_HtmlKey_" + DOMAIN_TRICKY_CHARACTERS;
     protected final static ColumnType LIST_KEY_TYPE = ColumnType.String;
     protected final static String LIST_KEY_NAME = "Key";
-    boolean IS_POSTGRES = WebTestHelper.getDatabaseType() == WebTestHelper.DatabaseType.PostgreSQL;
 
     protected final static String LIST_KEY_NAME2 = "Color \"`~!@#$%^&*()_-+={}[]|\\:;<>,.?/";
     protected final static String LIST_KEY_NAME2_BULK = "\"Color \"\"`~!@#$%^&*()_-+={}[]|\\:;<>,.?/\"";
@@ -637,15 +635,7 @@ public class ListTest extends BaseWebDriverTest
         log("Check Customize View worked");
         assertTextPresent(TEST_DATA[TD_COLOR][3]);
 
-        // Sorting is different between MSSQL and postgres if one of the values is empty / blank.
-        if (WebTestHelper.getDatabaseType() == WebTestHelper.DatabaseType.MicrosoftSQLServer)
-        {
-            assertTextPresentInThisOrder(TEST_DATA[TD_COLOR][3], TEST_DATA[TD_COLOR][1], TEST_DATA[TD_COLOR][2]);
-        }
-        else
-        {
-            assertTextPresentInThisOrder(TEST_DATA[TD_COLOR][1], TEST_DATA[TD_COLOR][2], TEST_DATA[TD_COLOR][3]);
-        }
+        assertTextPresentInThisOrder(TEST_DATA[TD_COLOR][1], TEST_DATA[TD_COLOR][2], TEST_DATA[TD_COLOR][3]);
 
         assertTextNotPresent(TEST_DATA[TD_COLOR][0], _listColGood.getLabel());
 
@@ -665,14 +655,7 @@ public class ListTest extends BaseWebDriverTest
         File tableFile = new DataRegionExportHelper(new DataRegionTable("query", getDriver())).exportText();
         TextSearcher tsvSearcher = new TextSearcher(tableFile);
 
-        if (WebTestHelper.getDatabaseType() == WebTestHelper.DatabaseType.MicrosoftSQLServer)
-        {
-            assertTextPresentInThisOrder(tsvSearcher, TEST_DATA[TD_COLOR][3], TEST_DATA[TD_COLOR][1], TEST_DATA[TD_COLOR][2]);
-        }
-        else
-        {
-            assertTextPresentInThisOrder(tsvSearcher, TEST_DATA[TD_COLOR][1], TEST_DATA[TD_COLOR][2], TEST_DATA[TD_COLOR][3]);
-        }
+        assertTextPresentInThisOrder(tsvSearcher, TEST_DATA[TD_COLOR][1], TEST_DATA[TD_COLOR][2], TEST_DATA[TD_COLOR][3]);
 
         assertTextNotPresent(tsvSearcher, TEST_DATA[TD_COLOR][0], _listColGood.getLabel());
         filterTest();
@@ -958,7 +941,7 @@ public class ListTest extends BaseWebDriverTest
         SelectRowsResponse rs = cmd.execute(cn, getProjectName());
         if (rs.getRows().isEmpty())
             throw new AssertionError("No ListAuditEvent for " + listName);
-        return ((Number) rs.getRows().get(0).get("RowId")).intValue();
+        return ((Number) rs.getRows().getFirst().get("RowId")).intValue();
     }
 
     /* Issue 23487: add regression coverage for batch insert into list with multiple errors
@@ -1092,9 +1075,9 @@ public class ListTest extends BaseWebDriverTest
     public void testChangeListNameOverAPI() throws Exception
     {
         List<FieldDefinition> cols = Arrays.asList(
-                new FieldDefinition("name", ColumnType.String),
-                new FieldDefinition("title", ColumnType.String),
-                new FieldDefinition("dewey", ColumnType.Decimal)
+            new FieldDefinition("name", ColumnType.String),
+            new FieldDefinition("title", ColumnType.String),
+            new FieldDefinition("dewey", ColumnType.Decimal)
         );
         String listName = "remoteAPIBeforeRename";
         TestDataGenerator dgen = new TestDataGenerator("lists", listName, getProjectName())
@@ -1114,7 +1097,6 @@ public class ListTest extends BaseWebDriverTest
     @Test
     public void testChangeListName()
     {
-
         String listNameBefore = TestDataGenerator.randomDomainName("Before Rename", DomainUtils.DomainKind.IntList);
 
         _listHelper.createList(PROJECT_VERIFY, listNameBefore,
@@ -1780,7 +1762,6 @@ public class ListTest extends BaseWebDriverTest
         listDefinitionPage.clickSave();
 
         String expectedDataChanges = "Indices: [field name1, unique: true, fieldname@3, unique: false, fieldname_2, unique: true] > [FieldName@3, unique: true, fieldName_2, unique: false]";
-        if (!IS_POSTGRES) expectedDataChanges = "Indices: [FieldName@3, unique: false, field Name1, unique: true, fieldName_2, unique: true] > [FieldName@3, unique: true, fieldName_2, unique: false]";
         expectedDomainEvent = new AuditLogHelper.DetailedAuditEventRow(null, listName, null,
                 "The descriptor of domain " + listName + " was updated.",
                 "", null, null, expectedDataChanges);
@@ -1839,7 +1820,6 @@ public class ListTest extends BaseWebDriverTest
     @Test
     public void testMultiChoiceValues() throws IOException, CommandException
     {
-        Assume.assumeTrue("Multi-choice text fields are only supported on PostgreSQL", WebTestHelper.getDatabaseType() == WebTestHelper.DatabaseType.PostgreSQL);
         // Setup a list with an auto-increment key and a multi-value text choice field.
         String encodedListName = TestDataGenerator.randomDomainName("multiChoiceList", DomainUtils.DomainKind.IntList);
         String keyName = TestDataGenerator.randomFieldName("'><script>alert(\":(\")</script>'");
@@ -1962,19 +1942,19 @@ public class ListTest extends BaseWebDriverTest
         ).getRows();
     }
 
- private List<String> getQueryFormFieldNamesDecoded()
+    private List<String> getQueryFormFieldNamesDecoded()
     {
         ArrayList<String> ret = new ArrayList<>();
         Locator.tag("input").attributeStartsWith("name", "quf_")
                 .findElements(getDriver()).stream()
                 .map(el -> el.getDomAttribute("name"))
                 .map(s -> s.substring(4))
-                .forEach(name -> ret.add(name));
+                .forEach(ret::add);
         Locator.tag("input").attributeStartsWith("name", "%_quf_")
                 .findElements(getDriver()).stream()
                 .map(el -> el.getDomAttribute("name"))
                 .map(name -> EscapeUtil.decode(name.substring(6)))
-                .forEach(name -> ret.add(name));
+                .forEach(ret::add);
         return ret;
     }
 
@@ -1997,10 +1977,8 @@ public class ListTest extends BaseWebDriverTest
 
     private void verifyTableIndexNonUnique(String prefix, String suffix, boolean isUnique)
     {
-        String boolDisplay = isUnique ? "0" : "1";
-        if (IS_POSTGRES) boolDisplay = isUnique ? "false" : "true";
-        String fieldKey = prefix + suffix;
-        if (IS_POSTGRES) fieldKey = fieldKey.toLowerCase();
+        String boolDisplay = isUnique ? "false" : "true";
+        String fieldKey = (prefix + suffix).toLowerCase();
         Locator locator = Locator.xpath("//td[contains(text(), '" + fieldKey + "')]/preceding-sibling::td[2][text()='" + boolDisplay + "']");
         checker().verifyTrue("Non_Unique value not as expected in metadata for locator: " + locator, locator.existsIn(getDriver()));
     }
@@ -2017,12 +1995,10 @@ public class ListTest extends BaseWebDriverTest
         // These validate Issue 52069 Issue 52070 Issue 52071
         testTricky("Tricky Field Character", false);
         testTricky("TrickyField Character Auto Key", true);
-
     }
 
     private void testTricky(String listName, boolean autoKey) throws IOException
     {
-
         String keyField = "Key Field \"`~!@#$%^&*()_-+={}[]|\\:;<>,.?/\u5668\u9aa8";
         String keyField_Bulk = "\"" + keyField.replace("\"", "\"\"") + "\"" ;
         String intField = "Int Field \"`~!@#$%^&*()_-+={}[]|\\:;<>,.?/\u00a5\u00e6";
@@ -2141,7 +2117,6 @@ public class ListTest extends BaseWebDriverTest
             expectedValues.add(Map.of(EscapeUtil.fieldKeyEncodePart(keyField), "3",
                     EscapeUtil.fieldKeyEncodePart(intField), "300",
                     EscapeUtil.fieldKeyEncodePart(trickyField), "303"));
-
         }
         else
         {
@@ -2232,7 +2207,6 @@ public class ListTest extends BaseWebDriverTest
             assertEquals(String.format("Row detail for column '%s' not as expected.", expectedFields.get(i)),
                     expectedFields.get(i), actualFields.get(i));
         }
-
     }
 
     private void validateDataRegionTableForTricky(List<Map<String, String>> expectedValue)
